# GeoMatrixBeta

./: .env  .gitignore  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/geomatrix/: api.py  config.py  dependencies.py  enums.py  main.py  models.py
src/geomatrix/alembic/: env.py
src/geomatrix/alembic/versions/: 2534045c0f90_usermodels.py  4a95bf17e4c3_apikey_table.py  7b17f609b175_cadastre_area_type_changed_to_float.py  a4c8d031cb33_created_by_field_added_in_cadastral_.py  baed7d39c593_ccmr_tables.py  d0fee7a50821_tables.py  d12db16a42f4_newmigration.py  eaf47db24ff8_init.py
src/geomatrix/authorization/: auth.py  crud.py  enums.py  models.py  router.py  schemas.py  service.py  utils.py
src/geomatrix/ccmr/: enums.py  landregistration.py  models.py  router.py  schemas.py  service.py
src/geomatrix/common/: email.py  schemas.py
src/geomatrix/database/: core.py
src/geomatrix/templates/: varify_account.html
