[tool.poetry]
name = "geomatrix"
version = "0.1.0"
description = ""
authors = ["Rashicom <rashid.kp484@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
geoalchemy2 = "^0.15.2"
alembic = "^1.13.2"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
fastapi-mail = "^1.4.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
